tests/symlink/symlink.exp
Error ------------------------------------------------------------------------------------------------------- qux.js:2:2

Cannot cast object literal to `Foo` because in property `x`, string [1] is incompatible with number [2].

   qux.js:2:2
   2| ({ x: "" }: Foo);
       ^^^^^^^^^

References:
   qux.js:2:7
   2| ({ x: "" }: Foo);
            ^^ [1]
   foo.js:1:24
   1| export type Foo = { x: number; }
                             ^^^^^^ [2]



Found 1 error
